pkl-core/src/test/files/LanguageSnippetTests/input/errors/const/constClassBody.pkl
notConst = 1

class Foo {
  foo = notConst
}

foo = new Foo {}
